--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -20,45 +20,76 @@ include ../../components/toggle/toggle.pug
 block content
   section.formElements
     .formElements__firstColumn
-      +textField({uniqId: 'textField1', title: 'Text field', description: 'default', placeholder: 'Email'})
-      +textField({uniqId: 'textField2', title: 'Text field', description: 'hover / focus', placeholder: 'Email', value: 'This is pretty awesome'})
-      +dropdown({uniqId: 'dropdown1', title: 'dropdown', description: 'hover', text: 'Сколько гостей'})
-      +textField({uniqId: 'textField3', title: 'Masked text field', description: '', placeholder: 'ДД.ММ.ГГГГ', mask: true})
-      //- +dropdown({uniqId: 'second', title: 'dropdown', description: 'hover', text: '2 спальни, 2 кровати, 3 ванныые комнаты', type: 'furniture'})
-      +dateDropdown({uniqId: 'dateDropdown1'})
-      +filterDateDropdown({uniqId: 'filterDateDropdown1'})
-      +textField({uniqId: 'textField4', title: 'subscription text field', description: '', placeholder: 'Email', arrow: true, mask: true})
-      +dropdown({uniqId: 'dropdown2', title: 'dropdown', description: 'default', text: '2 спальни, 2 кровати...'})
-      +dropdown({uniqId: 'dropdown3', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
-      +expandableCheckboxList({id: 'expandableCheckbox1', title: 'expandable checkbox list'})
-      +expandableCheckboxList({id: 'expandableCheckbox2', title: 'expandable checkbox list'})
-      //- +iconTextItem({title: 'Комфорт', text: 'Шумопоглощающие стены', icon: 'insert_emoticon'})
-      +iconTextList({list: [{title: 'Комфорт', text: 'Шумопоглощающие стены', icon: 'insert_emoticon'}, {title: 'Удобство', text: 'Окно в каждой из спален', icon: 'location_city'}]})
+      .formElents__firstBlock
+        .formElements__text-field
+          +textField({uniqId: 'textField1', title: 'Text field', description: 'default', placeholder: 'Email'})
+        .formElements__text-field
+          +textField({uniqId: 'textField2', title: 'Text field', description: 'hover / focus', placeholder: 'Email', value: 'This is pretty awesome'})
+        .formElements__dropdown
+          +dropdown({uniqId: 'dropdown1', title: 'dropdown', description: 'hover', text: 'Сколько гостей'})
+        .formElements__text-field--masked
+          +textField({uniqId: 'textField3', title: 'Masked text field', description: '', placeholder: 'ДД.ММ.ГГГГ', mask: true})
+        //- +dropdown({uniqId: 'second', title: 'dropdown', description: 'hover', text: '2 спальни, 2 кровати, 3 ванныые комнаты', type: 'furniture'})
+        .formElements__dropdown--date
+          +dateDropdown({uniqId: 'dateDropdown1', firstTitle: 'date dropdown', secondTitle: 'date dropdown'})
+        .formElements__dropdown--filter
+          +filterDateDropdown({uniqId: 'filterDateDropdown1'})
+        .formElements__text-field--sub
+          +textField({uniqId: 'textField4', title: 'subscription text field', description: '', placeholder: 'Email', arrow: true, mask: true})
+      .formElements__secondBlock
+        .formElements__dropdown
+          +dropdown({uniqId: 'dropdown2', title: 'dropdown', description: 'default', text: '2 спальни, 2 кровати...'})
+        .formElements__dropdown
+          +dropdown({uniqId: 'dropdown3', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
+      .formElements__thirdBlock
+        .formElements__expandable-checkbox
+          +expandableCheckboxList({id: 'expandableCheckbox1', title: 'expandable checkbox list'})
+        .formElements__expandable-checkbox--open
+          +expandableCheckboxList({id: 'expandableCheckbox2', title: 'expandable checkbox list'})
+          //- +iconTextItem({title: 'Комфорт', text: 'Шумопоглощающие стены', icon: 'insert_emoticon'})
+        .formElements__icon-text-list
+          +iconTextList({list: [{title: 'Комфорт', text: 'Шумопоглощающие стены', icon: 'insert_emoticon'}, {title: 'Удобство', text: 'Окно в каждой из спален', icon: 'location_city'}]})
     .formElements__secondColumn
-      +checkbox({id: 'checkbox1', title: 'Можно курить'})
-      +checkbox({id: 'checkbox2', title: 'Можно с питомцами'})
-      +checkbox({id: 'checkbox3', title: 'Можно пригласить гостей (до 10 человек)'})
-      +radioButton({id: 'radioButton1', title:'Мужчина', name: 'checkboxed', checked: true})
-      +radioButton({id: 'radioButton2', title: 'Женщина', name: 'checkboxed'})
-      +toggle({id: 'toggle1', text: 'Получать спецпредложения'})
-      +toggle({id: 'toggle2', text: 'Получать спецпредложения'})
-      +likeButton({number: 2, clicked: false})
-      +likeButton({number: 12, clicked: true})
-      +rateButton({id: 'rateButton1', size: 5})
-      +rateButton({id: 'rateButton2', size: 5})
-      +dropdown({uniqId: 'dropdown4', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
-      +checkbox({id: 'SuperIDcheckbox33', title: 'Широкий коридор', rich: true, richText: 'Ширина коридоров в номере не менее 91 см.'})
-      +checkbox({id: 'SuperIDcheckbox344', title: 'Помощник для инвалидов', rich: true, richText: 'На 1 этаже вас встретит специалист и проводит до номера.'})
-      +comment({id: 'UniqIdComment1', title: 'Мурад Сарафанов', date: '5', photo: '../../images/photo.png', text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'})
+      .formElements__firstBlock
+        .formElements__checkbox-button
+          +checkbox({id: 'checkbox1', title: 'Можно курить'})
+          +checkbox({id: 'checkbox2', title: 'Можно с питомцами'})
+          +checkbox({id: 'checkbox3', title: 'Можно пригласить гостей (до 10 человек)'})
+        .formElements__radio-button
+          +radioButton({id: 'radioButton1', title:'Мужчина', name: 'checkboxed', checked: true})
+          +radioButton({id: 'radioButton2', title: 'Женщина', name: 'checkboxed'})
+        .formElements__toggle
+          +toggle({id: 'toggle1', text: 'Получать спецпредложения'})
+          +toggle({id: 'toggle2', text: 'Получать спецпредложения'})
+        .formElements__like-button
+          +likeButton({number: 2, clicked: false})
+          +likeButton({number: 12, clicked: true})
+        .formElements__rate-button
+          +rateButton({id: 'rateButton1', size: 5})
+          +rateButton({id: 'rateButton2', size: 5})
+      .formElements__secondBlock
+        +dropdown({uniqId: 'dropdown4', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
+      .formElements__thirdBlock
+        +checkbox({id: 'SuperIDcheckbox33', title: 'Широкий коридор', rich: true, richText: 'Ширина коридоров в номере не менее 91 см.'})
+        +checkbox({id: 'SuperIDcheckbox344', title: 'Помощник для инвалидов', rich: true, richText: 'На 1 этаже вас встретит специалист и проводит до номера.'})
+        +comment({id: 'UniqIdComment1', title: 'Мурад Сарафанов', date: '5', photo: '../../images/photo.png', text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'})
     .formElements__thirdColumn
-      +button({title: 'click me'})
-      +button({title: 'click me'})
-      +button({title: 'click me', type: 'white'})
-      +button({title: 'click me', type: 'white'})
-      +button({title: 'click me', type: 'without'})
-      +button({title: 'click me', type: 'without'})
-      //- +button({title: 'Перейти к оплате', type: 'big'})
-      +button({title: 'Перейти к оплате', type: 'big', arrow: true})
-      +pagination({})
-      +dropdown({uniqId: 'dropdown5', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
-      +bulletList({title: 'bullet list', list: ['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00, а выезд до 12:00']})
+      .formElements__firstBlock
+        .formElements__range-slider
+        .formElements__buttons
+          +button({title: 'click me'})
+          +button({title: 'click me'})
+          +button({title: 'click me', type: 'white'})
+          +button({title: 'click me', type: 'white'})
+          +button({title: 'click me', type: 'without'})
+          +button({title: 'click me', type: 'without'})
+          //- +button({title: 'Перейти к оплате', type: 'big'})
+          +button({title: 'Перейти к оплате', type: 'big', arrow: true})
+        .formElements__pagination
+          +pagination({})
+      .formElements__secondBlock
+        .formElements__dropdown
+          +dropdown({uniqId: 'dropdown5', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
+      .formElements__thirdBlock
+        .formElements__bullet-list
+          +bulletList({title: 'bullet list', list: ['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00, а выезд до 12:00']})
