--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -88,16 +88,22 @@ block content
     .formElements__thirdColumn
       .formElements__firstBlock
         .formElements__range-slider
+          h3 range slider
         .formElements__buttons
-          +button({title: 'click me'})
-          +button({title: 'click me'})
-          +button({title: 'click me', type: 'white'})
-          +button({title: 'click me', type: 'white'})
-          +button({title: 'click me', type: 'without'})
-          +button({title: 'click me', type: 'without'})
+          h3 buttons
+          .formElements__topButtons
+            +button({title: 'click me'})
+            +button({title: 'click me'})
+          .formElements__middleButtons
+            +button({title: 'click me', type: 'white'})
+            +button({title: 'click me', type: 'white'})
+          .formElements__botButtons
+            +button({title: 'click me', type: 'without'})
+            +button({title: 'click me', type: 'without'})
           //- +button({title: 'Перейти к оплате', type: 'big'})
           +button({title: 'Перейти к оплате', type: 'big', arrow: true})
         .formElements__pagination
+          h3 pagination
           +pagination({})
       .formElements__secondBlock
         .formElements__dropdown
