Fixed text input components value

--- a/src/components/textField/textField.scss
+++ b/src/components/textField/textField.scss
@@ -33,6 +33,8 @@
     padding-right: 40px;
     font-size: 14px;
     color: $dark75;
+    letter-spacing: -0.05px;
+    word-spacing: -1px;
     &::placeholder {
       font-weight: 400;
       font-size: 14px;
