Added to expendable checkbox list open  option

--- a/src/components/expandableCheckboxList/expandableCheckboxList.scss
+++ b/src/components/expandableCheckboxList/expandableCheckboxList.scss
@@ -30,5 +30,8 @@
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+    &--open {
+      display: block !important;
+    }
   }
 }
