--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -45,7 +45,7 @@ block content
         .formElements__expandable-checkbox
           +expandableCheckboxList({id: 'expandableCheckbox1', title: 'expandable checkbox list'})
         .formElements__expandable-checkbox--open
-          +expandableCheckboxList({id: 'expandableCheckbox2', title: 'expandable checkbox list'})
+          +expandableCheckboxList({id: 'expandableCheckbox2', title: 'expandable checkbox list', open: true})
           //- +iconTextItem({title: 'Комфорт', text: 'Шумопоглощающие стены', icon: 'insert_emoticon'})
         .formElements__icon-text-list
           +iconTextList({list: [{title: 'Комфорт', text: 'Шумопоглощающие стены', icon: 'insert_emoticon'}, {title: 'Удобство', text: 'Окно в каждой из спален', icon: 'location_city'}]})
