--- a/src/components/expandableCheckboxList/expandableCheckboxList.pug
+++ b/src/components/expandableCheckboxList/expandableCheckboxList.pug
@@ -1,11 +1,15 @@
 include ../checkbox/checkbox.pug
 
-mixin expandableCheckboxList({id = 'uniqIdExpandable', title = ''})
+mixin expandableCheckboxList({id = 'uniqIdExpandable', title = '', open = false})
   - const list = ["Завтрак", "Письменный стол", "Стул для кормления", "Кроватка", "Телевизор", "Шампунь", "Телевизор", "Шампунь"];
   .expandableCheckboxes
     .expandableCheckboxes__header
       .expandableCheckboxes__title= title
-      .material-icons.md-24.expandableCheckboxes__arrow &#xe5cf;
-    ul.expandableCheckboxes__content
+      .material-icons.md-24.expandableCheckboxes__arrow(
+        class=open ? "expandableCheckboxes__arrow--rotate" : ""
+      ) &#xe5cf;
+    ul.expandableCheckboxes__content(
+      style=open ? "display: block; max-height: 240px;" : "display: none: max-height: null"
+    )
       each item, indx in list 
         +checkbox({id: `${id}${indx}`, title: item})
