--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -47,6 +47,7 @@
     cursor: pointer;
   }
   &__bottomField {
+    position: absolute;
     width: 320px;
     background: #ffffff;
     border: 1px solid $dark50;
@@ -54,6 +55,7 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     padding: 7px 7px 0 15px;
+    z-index: 2;
     &--none {
       display: none;
     }
