--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -40,7 +40,7 @@ block content
         .formElements__dropdown
           +dropdown({uniqId: 'dropdown2', title: 'dropdown', description: 'default', text: '2 спальни, 2 кровати...'})
         .formElements__dropdown
-          +dropdown({uniqId: 'dropdown3', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
+          +dropdown({uniqId: 'dropdown3', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...', open: true})
       .formElements__thirdBlock
         .formElements__expandable-checkbox
           +expandableCheckboxList({id: 'expandableCheckbox1', title: 'expandable checkbox list'})
@@ -77,7 +77,7 @@ block content
               +rateButton({id: 'rateButton2', size: 5})
       .formElements__secondBlock
         .formElements__dropdown
-          +dropdown({uniqId: 'dropdown4', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
+          +dropdown({uniqId: 'dropdown4', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...', open: true})
       .formElements__thirdBlock
         .formElements__checkboxes
           h3 rich Checkbox Buttons
@@ -107,7 +107,7 @@ block content
           +pagination({})
       .formElements__secondBlock
         .formElements__dropdown
-          +dropdown({uniqId: 'dropdown5', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...'})
+          +dropdown({uniqId: 'dropdown5', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...', open: true})
       .formElements__thirdBlock
         .formElements__bullet-list
           +bulletList({title: 'bullet list', list: ['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00, а выезд до 12:00']})
