--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -38,9 +38,9 @@ block content
           +textField({uniqId: 'textField4', title: 'subscription text field', description: '', placeholder: 'Email', arrow: true, mask: true})
       .formElements__secondBlock
         .formElements__dropdown
-          +dropdown({uniqId: 'dropdown2', title: 'dropdown', description: 'default', text: '2 спальни, 2 кровати...'})
+          +dropdown({uniqId: 'dropdown2', type: 'furniture', title: 'dropdown', small: true, description: 'default', text: '2 спальни, 2 кровати...'})
         .formElements__dropdown
-          +dropdown({uniqId: 'dropdown3', title: 'dropdown', description: 'expanded', text: '2 спальни, 2 кровати...', open: true})
+          +dropdown({uniqId: 'dropdown3', type: 'furniture', title: 'dropdown', small: true, description: 'expanded', text: '2 спальни, 2 кровати...', open: true})
       .formElements__thirdBlock
         .formElements__expandable-checkbox
           +expandableCheckboxList({id: 'expandableCheckbox1', title: 'expandable checkbox list'})
