--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -45,6 +45,9 @@
     top: 10px;
     right: 10px;
     cursor: pointer;
+    &--small {
+      right: 64px;
+    }
   }
   &__bottomField {
     position: absolute;
@@ -115,5 +118,9 @@
   }
   &__main {
     position: relative;
+  }
+
+  &__furnitureField {
+    width: 266px;
   }
 }
