--- a/src/components/textField/textField.pug
+++ b/src/components/textField/textField.pug
@@ -1,12 +1,12 @@
 mixin textField(props)
-  - const { id = "uniqIdTextField", title = "Default", description = "", placeholder = "", value = "", styles = "", classNames = "", arrow = false, readonly = false, mask = false, dropdown = false } = props;
+  - const { id = "uniqIdTextField", title = "Default", description = "", placeholder = "", value = "", styles = "", classNames = "", arrow = false, small = false, readonly = false, mask = false, dropdown = false } = props;
   .textField
-    .textField__top(class=!arrow ? "" : "textField__top--arrow") 
+    .textField__top(class=small ? "textField__top--small" : "") 
       span.textField__title= title
       span.textField__description= description
     div(class=classNames, data-dropdown=dropdown ? id : false)
       input.textField__input(
-        class=!arrow ? "" : "textField__input--arrow",
+        class=small ? "textField__input--small" : "",
         placeholder=placeholder,
         value=value,
         readonly=readonly,
@@ -15,6 +15,6 @@ mixin textField(props)
         id=uniqId
       )
       if dropdown === true
-        .material-icons.md-24.dropdown__arrow &#xe5cf;
+        .material-icons.md-24.dropdown__arrow(class=small ? "dropdown__arrow--small" : "") &#xe5cf;
     if arrow === true
       span.material-icons.md-24.textField__arrow &#xe5c8;
