--- a/src/components/textField/textField.scss
+++ b/src/components/textField/textField.scss
@@ -5,7 +5,7 @@
   &__top {
     display: flex;
     justify-content: space-between;
-    &--arrow {
+    &--small {
       width: 266px;
     }
   }
@@ -48,7 +48,7 @@
     &:read-only {
       cursor: pointer;
     }
-    &--arrow {
+    &--small {
       width: 266px;
     }
   }
