--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -35,7 +35,7 @@ block content
         .formElements__dropdown--filter
           +filterDateDropdown({uniqId: 'filterDateDropdown1'})
         .formElements__text-field--sub
-          +textField({uniqId: 'textField4', title: 'subscription text field', description: '', placeholder: 'Email', arrow: true, mask: true})
+          +textField({uniqId: 'textField4', title: 'subscription text field', description: '', placeholder: 'Email', arrow: true, small: true})
       .formElements__secondBlock
         .formElements__dropdown
           +dropdown({uniqId: 'dropdown2', type: 'furniture', title: 'dropdown', small: true, description: 'default', text: '2 спальни, 2 кровати...'})
