Added headers: full and small. Finished headersAndFooters page

--- a/src/pages/headersAndFooters/headersAndFooters.pug
+++ b/src/pages/headersAndFooters/headersAndFooters.pug
@@ -1,8 +1,13 @@
 extends ../../layouts/UI.pug
 include ../../components/header/header.pug
+include ../../components/footer/footer.pug
 block content
   section.headersAndFooters 
     .headersAndFooters__first
       +header({id: 'header1'})
     .headersAndFooters__second
       +header({id: 'header2', auth: true})
+    .headersAndFooters__footer 
+      +footer({id: 'footer1', type: 'full'})
+    .headersAndFooters__footer--small 
+      +footer({id: 'footer2', type: 'Small'})
