--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,7 +5,10 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  height: 70px;
   padding: 0 140px;
+  background: #ffffff;
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   &__logo {
     margin-right: 287px;
   }
@@ -27,7 +30,7 @@
     font-weight: 400;
     font-size: 14px;
     color: $dark50;
-    & .active {
+    &.active {
       font-style: normal;
       font-weight: 700;
       font-size: 14px;
