--- a/src/layouts/UI.pug
+++ b/src/layouts/UI.pug
@@ -5,6 +5,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     title UI PAGE - Metalamp level 2
   body
     .UILayout__wrapper
