Added registration component

--- a/src/components/findRooms/findRooms.pug
+++ b/src/components/findRooms/findRooms.pug
@@ -2,14 +2,14 @@ include ../dateDropdown/dateDropdown.pug
 include ../dropdown/dropdown.pug
 include ../button/button.pug
 
-mixin findRooms({})
+mixin findRooms({id = ''})
   .findRooms
     form
       .findRooms__header
         h1 Найдём номера под ваши пожелания
       .findRooms__dateDropdown
-        +dateDropdown({uniqId: 'cards__dateDropdown1', firstTitle: 'прибытие', secondTitle: 'выезд'})
+        +dateDropdown({uniqId: `cards__dateDropdown-${id}`, firstTitle: 'прибытие', secondTitle: 'выезд'})
       .findRooms__guestDropdown
-        +dropdown({uniqId: 'cards__dropdown1', title: 'гости', description: '', text: 'Сколько гостей'})
+        +dropdown({uniqId: `cards__dropdown-${id}`, title: 'гости', description: '', text: 'Сколько гостей'})
       .findRooms__button
         +button({title: 'Подобрать номер', type: 'big', arrow: true})
