Added pages wrapper

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,4 +1,4 @@
-extends ../../layouts/UI.pug
+extends ../../layouts/UI/UI.pug
 include ../../components/room/room.pug
 include ../../components/airDatePicker/airDatePicker.pug
 include ../../components/findRooms/findRooms.pug
