--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,5 +1,7 @@
 .cards {
   display: flex;
+  margin-top: 65px;
+  margin-left: 140px;
   &__firstColumn {
     margin-right: 40px;
   }
@@ -28,4 +30,8 @@
   &__login {
     margin-top: 40px;
   }
+}
+
+.UILayout__wrapper--cards {
+  background: #f4f4f6;
 }
