--- a/src/pages/colorsAndType/colorsAndType.pug
+++ b/src/pages/colorsAndType/colorsAndType.pug
@@ -1,4 +1,4 @@
-extends ../../layouts/UI.pug
+extends ../../layouts/UI/UI.pug
 include ../../components/UI-kit/ColorBlock/colorBlock.pug
 include ../../components/UI-kit/ColorFonts/colorFonts.pug
 
