--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -1,4 +1,4 @@
-extends ../../layouts/UI.pug
+extends ../../layouts/UI/UI.pug
 include ../../components/textField/textField.pug
 include ../../components/button/button.pug
 include ../../components/dropdown/dropdown.pug
