--- a/src/pages/headersAndFooters/headersAndFooters.pug
+++ b/src/pages/headersAndFooters/headersAndFooters.pug
@@ -1,4 +1,4 @@
-extends ../../layouts/UI.pug
+extends ../../layouts/UI/UI.pug
 include ../../components/header/header.pug
 include ../../components/footer/footer.pug
 block content
