--- a/src/layouts/UI/UI.scss
+++ b/src/layouts/UI/UI.scss
@@ -1,5 +1,7 @@
 .UILayout__wrapper {
-  background-color: #e5e5e5;
+  background: #ffffff;
+  margin: 0 auto;
+  width: 1440px;
 }
 
 .UILayout__logo {
