Added chart component, finished roomDetails page

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,6 +3,7 @@
 .footer {
   display: flex;
   justify-content: center;
+  border-top: 1px solid rgba(31, 32, 65, 0.1);
   &__full {
     width: 100%;
     height: 442px;
