--- a/src/pages/startPage/startPage.pug
+++ b/src/pages/startPage/startPage.pug
@@ -11,7 +11,7 @@ html(lang="en")
       li
         a(href=`./${link}.html`)= link
     hr
-    - const links = ["loginPage", "registrationPage", "landingPage"];
+    - const links = ["loginPage", "registrationPage", "landingPage", "roomDetails"];
     each link in links
       li
         a(href=`./${link}.html`)= link
